smashed out typing rules

--- a/report/thesis/includes.tex
+++ b/report/thesis/includes.tex
@@ -75,6 +75,9 @@
   \renewcommand{\DefTirName}[1]{\hypertarget{#1}{\TirName {#1}}}
   \newcommand{\Rule}[1]{\hyperlink{#1}{\TirName {#1}}}
 
+\newcommand{\sslash}{\mathbin{/\mkern-6mu/}}
+\newcommand{\comment}[1]{\textcolor{gray}{\sslash\textit{ #1}}}
+
 \newcommand{\sref}[1]{Section~\ref{sec:#1}}
 \newcommand{\fref}[1]{Figure~\ref{fig:#1}}
 \newcommand{\tref}[1]{Table~\ref{table:#1}}
