--- a/report/thesis/references3.bib
+++ b/report/thesis/references3.bib
@@ -35,16 +35,8 @@
   abstract      = {Dijkstra monads enable a dependent type theory to be enhanced with support for specifying and verifying effectful code via weakest preconditions. Together with their closely related counterparts, Hoare monads, they provide the basis on which verification tools like F*, Hoare Type Theory (HTT), and Ynot are built. We show that Dijkstra monads can be derived "for free" by applying a continuation-passing style (CPS) translation to the standard monadic definitions of the underlying computational effects. Automatically deriving Dijkstra monads in this way provides a correct-by-construction and efficient way of reasoning about user-defined effects in dependent type theories. We demonstrate these ideas in EMF*, a new dependently typed calculus, validating it via both formal proof and a prototype implementation within F*. Besides equipping F* with a more uniform and extensible effect system, EMF* enables a novel mixture of intrinsic and extrinsic proofs within F*.},
   archiveprefix = {arxiv},
   keywords      = {Computer Science - Programming Languages},
-  file          = {/Users/charlielidbury/Zotero/storage/8DDPIJHK/Ahman et al. - 2019 - Dijkstra Monads for Free.pdf;/Users/charlielidbury/Zotero/storage/4N32MFA2/Ahman et al. - 2019 - Dijkstra Monads for Free.html}
-}
-
-@inproceedings{altenkirch2010pisigma,
-  title     = {{{$\Pi\Sigma$}}: {{Dependent}} Types without the Sugar},
-  booktitle = {Functional and Logic Programming: 10th International Symposium, {{FLOPS}} 2010, Sendai, Japan, April 19-21, 2010. {{Proceedings}} 10},
-  author    = {Altenkirch, Thorsten and Danielsson, Nils Anders and L{\"o}h, Andres and Oury, Nicolas},
-  year      = {2010},
-  pages     = {40--55},
-  publisher = {Springer}
+  note          = {Comment: extended pre-print for POPL 2017 final version with the missing ERC acknowledgement},
+  file          = {/Users/charlielidbury/Zotero/storage/PPWMR49X/Ahman et al. - 2019 - Dijkstra Monads for Free.pdf;/Users/charlielidbury/Zotero/storage/HB3ZZQ8W/Ahman et al. - 2019 - Dijkstra Monads for Free.html}
 }
 
 @misc{ATSHome,
@@ -57,14 +49,6 @@
   title   = {{{ATS-Implements}}},
   url     = {https://www.cs.bu.edu/~hwxi/atslangweb/Implements.html},
   urldate = {2024-01-24}
-}
-
-@inproceedings{bhargavan2017everest,
-  title     = {Everest: {{Towards}} a Verified, Drop-in Replacement of {{HTTPS}}},
-  booktitle = {2nd Summit on Advances in Programming Languages ({{SNAPL}} 2017)},
-  author    = {Bhargavan, Karthikeyan and Bond, Barry and {Delignat-Lavaud}, Antoine and Fournet, C{\'e}dric and Hawblitzel, Chris and Hritcu, Catalin and Ishtiaq, Samin and Kohlweiss, Markulf and Leino, Rustan and Lorch, Jay and others},
-  year      = {2017},
-  publisher = {Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
 }
 
 @inproceedings{chenCombiningProgrammingTheorem2005,
@@ -93,19 +77,12 @@
 
 @misc{DimacsCNFPDF,
   title    = {Dimacs {{CNF}} {\textbar} {{PDF}} {\textbar} {{File Format}} {\textbar} {{Areas Of Computer Science}}},
+  journal  = {Scribd},
   url      = {https://www.scribd.com/document/368002947/dimacs-cnf},
   urldate  = {2024-01-31},
   abstract = {dimacs spec},
   langid   = {english},
-  file     = {/Users/charlielidbury/Zotero/storage/8TR39UD7/dimacs-cnf.html}
-}
-
-@inproceedings{ferraiuolo2017komodo,
-  title     = {Komodo: {{Using}} Verification to Disentangle Secure-Enclave Hardware from Software},
-  booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles},
-  author    = {Ferraiuolo, Andrew and Baumann, Andrew and Hawblitzel, Chris and Parno, Bryan},
-  year      = {2017},
-  pages     = {287--305}
+  file     = {/Users/charlielidbury/Zotero/storage/G9MYXTY3/dimacs-cnf.html}
 }
 
 @inproceedings{fioraldiAFLCombiningIncremental2020,
@@ -124,7 +101,7 @@
   file       = {/Users/charlielidbury/Zotero/storage/YG8ZD9WS/Fioraldi et al. - 2020 - AFL++ combining incremental steps of fuzzing rese.pdf}
 }
 
-@inproceedings{groceSwarmTesting2012a,
+@inproceedings{groceSwarmTesting2012,
   title     = {Swarm Testing},
   booktitle = {Proceedings of the 2012 {{International Symposium}} on {{Software Testing}} and {{Analysis}}},
   author    = {Groce, Alex and Zhang, Chaoqiang and Eide, Eric and Chen, Yang and Regehr, John},
@@ -175,10 +152,10 @@
   urldate  = {2024-01-24},
   abstract = {The Dijkstra and Hoare monads have been introduced recently for capturing weakest precondition computations and computations with pre- and post-conditions, within the context of program verification, supported by a theorem prover. Here we give a more general description of such monads in a categorical setting. We first elaborate the recently developed view on program semantics in terms of a triangle of computations, state transformers, and predicate transformers. Instantiating this triangle for different computational monads T shows how to define the Dijkstra monad associated with T, via the logic involved. Subsequently we give abstract definitions of the Dijkstra and Hoare monad, parametrised by a computational monad. These definitions presuppose a suitable (categorical) predicate logic, defined on the Kleisli category of the underlying monad. When all this structure exists, we show that there are maps of monads (Hoare) {$\Rightarrow$} (State) {$\Rightarrow$} (Dijkstra), all parametrised by a monad T.},
   keywords = {Hoare logic,Monad,Program semantics,Weakest precondition},
-  file     = {/Users/charlielidbury/Zotero/storage/3KN8RQJV/Jacobs - 2015 - Dijkstra and Hoare monads in monadic computation.html;/Users/charlielidbury/Zotero/storage/4PNZ73LB/Jacobs - 2015 - Dijkstra and Hoare monads in monadic computation.html}
+  file     = {/Users/charlielidbury/Zotero/storage/3KN8RQJV/Jacobs - 2015 - Dijkstra and Hoare monads in monadic computation.html}
 }
 
-@article{jungRustBeltSecuringFoundations2018a,
+@article{jungRustBeltSecuringFoundations2018,
   title      = {{{RustBelt}}: Securing the Foundations of the {{Rust}} Programming Language},
   shorttitle = {{{RustBelt}}},
   author     = {Jung, Ralf and Jourdan, Jacques-Henri and Krebbers, Robbert and Dreyer, Derek},
@@ -196,7 +173,7 @@
   langid     = {english}
 }
 
-@inproceedings{kleinSeL4FormalVerification2009a,
+@inproceedings{kleinSeL4FormalVerification2009,
   title      = {{{seL4}}: Formal Verification of an {{OS}} Kernel},
   shorttitle = {{{seL4}}},
   booktitle  = {Proceedings of the {{ACM SIGOPS}} 22nd Symposium on {{Operating}} Systems Principles},
@@ -213,14 +190,6 @@
   langid     = {english}
 }
 
-@inproceedings{lorch2020armada,
-  title     = {Armada: Low-Effort Verification of High-Performance Concurrent Programs},
-  booktitle = {Proceedings of the 41st {{ACM SIGPLAN}} Conference on Programming Language Design and Implementation},
-  author    = {Lorch, Jacob R and Chen, Yixuan and Kapritsos, Manos and Parno, Bryan and Qadeer, Shaz and Sharma, Upamanyu and Wilcox, James R and Zhao, Xueyuan},
-  year      = {2020},
-  pages     = {197--210}
-}
-
 @misc{MagmideMagmide2024,
   title        = {Magmide/Magmide},
   year         = {2024},
@@ -232,12 +201,13 @@
   keywords     = {coq,dependent-types,formal-methods,formal-verification,logic,systems-programming,type-safety,verification}
 }
 
-@inproceedings{nanevskiConsiderationPublicationFunctionala,
+@inproceedings{nanevskiConsiderationPublicationFunctional,
   title    = {Under {{Consideration}} for {{Publication}} in {{J}}. {{Functional Programming Hoare Type Theory}}, {{Polymorphism}} and {{Separation}}},
   author   = {Nanevski, Aleksandar and Morrisett, Greg and Birkedal, L.},
   url      = {https://www.semanticscholar.org/paper/Under-Consideration-for-Publication-in-J.-Hoare-and-Nanevski-Morrisett/aef3d1fc100d0ed4561549da30f002bf9ee21722},
   urldate  = {2024-01-24},
-  abstract = {We consider the problem of reconciling a dependently typed functional language with imperative features such as mutable higher-order state, pointer aliasing, and non-termination. We propose Hoare Type Theory (HTT), which incorporates Hoare-style specifications into types, making it possible to statically track and enforce correct use of side effects. The main feature of HTT is the Hoare type \{P \}x:A\{Q\} specifying computations with precondition P and postcondition Q that return a result of type A. Hoare types can be nested, combined with other types, and abstracted, leading to a smooth integration with higher-order functions and type polymorphism. We further show that in the presence of type polymorphism, it becomes possible to interpret the Hoare types in the " small footprint " manner, as advocated by Separation Logic, whereby specifications tightly describe the state required by the computation. We establish that HTT is sound and compositional, in the sense that separate verifica-tions of individual program components suffice to ensure the correctness of the composite program.}
+  abstract = {We consider the problem of reconciling a dependently typed functional language with imperative features such as mutable higher-order state, pointer aliasing, and non-termination. We propose Hoare Type Theory (HTT), which incorporates Hoare-style specifications into types, making it possible to statically track and enforce correct use of side effects. The main feature of HTT is the Hoare type \{P \}x:A\{Q\} specifying computations with precondition P and postcondition Q that return a result of type A. Hoare types can be nested, combined with other types, and abstracted, leading to a smooth integration with higher-order functions and type polymorphism. We further show that in the presence of type polymorphism, it becomes possible to interpret the Hoare types in the " small footprint " manner, as advocated by Separation Logic, whereby specifications tightly describe the state required by the computation. We establish that HTT is sound and compositional, in the sense that separate verifica-tions of individual program components suffice to ensure the correctness of the composite program.},
+  note     = {[TLDR] This work considers the problem of reconciling a dependently typed functional language with imperative features such as mutable higher-order state, pointer aliasing, and non-termination, and proposes Hoare Type Theory (HTT), which incorporates Hoare-style specifications into types, making it possible to statically track and enforce correct use of side effects.}
 }
 
 @article{nanevskiYnotDependentTypes2008,
@@ -276,7 +246,7 @@
   abstract      = {Programming with dependent types is a blessing and a curse. It is a blessing to be able to bake invariants into the definition of data-types: we can finally write correct-by-construction software. However, this extreme accuracy is also a curse: a data-type is the combination of a structuring medium together with a special purpose logic. These domain-specific logics hamper any effort of code reuse among similarly structured data. In this paper, we exorcise our data-types by adapting the notion of ornament to our universe of inductive families. We then show how code reuse can be achieved by ornamenting functions. Using these functional ornament, we capture the relationship between functions such as the addition of natural numbers and the concatenation of lists. With this knowledge, we demonstrate how the implementation of the former informs the implementation of the latter: the user can ask the definition of addition to be lifted to lists and she will only be asked the details necessary to carry on adding lists rather than numbers. Our presentation is formalised in a type theory with a universe of data-types and all our constructions have been implemented as generic programs, requiring no extension to the type theory.},
   archiveprefix = {arxiv},
   keywords      = {Computer Science - Programming Languages},
-  file          = {/Users/charlielidbury/Zotero/storage/R2829K92/Pierre-Evariste and Conor - 2014 - Transporting Functions across Ornaments.pdf;/Users/charlielidbury/Zotero/storage/BPFQ54M3/Pierre-Evariste and Conor - 2014 - Transporting Functions across Ornaments.html;/Users/charlielidbury/Zotero/storage/HC3TCW8I/Pierre-Evariste and Conor - 2014 - Transporting Functions across Ornaments.html}
+  file          = {/Users/charlielidbury/Zotero/storage/R2829K92/Pierre-Evariste and Conor - 2014 - Transporting Functions across Ornaments.pdf;/Users/charlielidbury/Zotero/storage/HC3TCW8I/Pierre-Evariste and Conor - 2014 - Transporting Functions across Ornaments.html}
 }
 
 @article{protzenkoLowVerifiedLowLevel2017,
@@ -297,29 +267,11 @@
   abstract      = {We present Low*, a language for low-level programming and verification, and its application to high-assurance optimized cryptographic libraries. Low* is a shallow embedding of a small, sequential, well-behaved subset of C in F*, a dependently-typed variant of ML aimed at program verification. Departing from ML, Low* does not involve any garbage collection or implicit heap allocation; instead, it has a structured memory model {\textbackslash}`a la CompCert, and it provides the control required for writing efficient low-level security-critical code. By virtue of typing, any Low* program is memory safe. In addition, the programmer can make full use of the verification power of F* to write high-level specifications and verify the functional correctness of Low* code using a combination of SMT automation and sophisticated manual proofs. At extraction time, specifications and proofs are erased, and the remaining code enjoys a predictable translation to C. We prove that this translation preserves semantics and side-channel resistance. We provide a new compiler back-end from Low* to C and, to evaluate our approach, we implement and verify various cryptographic algorithms, constructions, and tools for a total of about 28,000 lines of code, specification and proof. We show that our Low* code delivers performance competitive with existing (unverified) C cryptographic libraries, suggesting our approach may be applicable to larger-scale low-level software.},
   archiveprefix = {arxiv},
   keywords      = {Computer Science - Cryptography and Security,Computer Science - Programming Languages},
-  file          = {/Users/charlielidbury/Zotero/storage/6DNMIKF6/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.pdf;/Users/charlielidbury/Zotero/storage/2WRN5JKJ/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.html;/Users/charlielidbury/Zotero/storage/UTTHN35Q/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.html}
+  note          = {Comment: extended version of ICFP final camera ready version; only Acknowledgements differ from 30 Aug 2017 version},
+  file          = {/Users/charlielidbury/Zotero/storage/6DNMIKF6/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.pdf;/Users/charlielidbury/Zotero/storage/UTTHN35Q/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.html}
 }
 
-@misc{rust-anecdote,
-  author = {Hoare, Graydon},
-  year   = {2022},
-  month  = feb,
-  url    = {https://twitter.com/graydon_pub/status/1492792051657629698}
-}
-
-@misc{RustProgrammingLanguage,
-  title   = {Rust {{Programming Language}}},
-  url     = {https://www.rust-lang.org/},
-  urldate = {2024-06-04}
-}
-
-@misc{stackoverflow,
-  title = {{{StackOverflow}} Developer Survey},
-  year  = {2021},
-  url   = {https://insights.stackoverflow.com/survey/2021}
-}
-
-@inproceedings{swamyVerifyingHigherorderPrograms2013a,
+@inproceedings{swamyVerifyingHigherorderPrograms2013,
   title     = {Verifying {{Higher-order Programs}} with the {{Dijkstra Monad}}},
   booktitle = {{{ACM Programming Language Design}} and {{Implementation}} ({{PLDI}}) 2013},
   author    = {Swamy, Nikhil and Chen, Juan and Livshits, Ben},
@@ -373,7 +325,7 @@
   abstract      = {The framework Pure Type System (PTS) offers a simple and general approach to designing and formalizing type systems. However, in the presence of dependent types, there often exist certain acute problems that make it difficult for PTS to directly accommodate many common realistic programming features such as general recursion, recursive types, effects (e.g., exceptions, references, input/output), etc. In this paper, Applied Type System (ATS) is presented as a framework for designing and formalizing type systems in support of practical programming with advanced types (including dependent types). In particular, it is demonstrated that ATS can readily accommodate a paradigm referred to as programming with theorem-proving (PwTP) in which programs and proofs are constructed in a syntactically intertwined manner, yielding a practical approach to internalizing constraint-solving needed during type-checking. The key salient feature of ATS lies in a complete separation between statics, where types are formed and reasoned about, and dynamics, where programs are constructed and evaluated. With this separation, it is no longer possible for a program to occur in a type as is otherwise allowed in PTS. The paper contains not only a formal development of ATS but also some examples taken from ats-lang.org, a programming language with a type system rooted in ATS, in support of employing ATS as a framework to formulate advanced type systems for practical programming.},
   archiveprefix = {arxiv},
   keywords      = {Computer Science - Logic in Computer Science,Computer Science - Programming Languages},
-  file          = {/Users/charlielidbury/Zotero/storage/7QXFF65Y/Xi - 2017 - Applied Type System An Approach to Practical Prog.pdf;/Users/charlielidbury/Zotero/storage/A85LQM2C/Xi - 2017 - Applied Type System An Approach to Practical Prog.html}
+  file          = {/Users/charlielidbury/Zotero/storage/AX5D88SU/Xi - 2017 - Applied Type System An Approach to Practical Prog.pdf;/Users/charlielidbury/Zotero/storage/AVQ38G85/Xi - 2017 - Applied Type System An Approach to Practical Prog.html}
 }
 
 @inproceedings{xiImperativeProgrammingDependent2000,
@@ -389,7 +341,7 @@
   urldate   = {2024-01-24},
   abstract  = {The article enriches imperative programming with a form of dependent types. We start by explaining some motivations for this enrichment and mentioning some major obstacles that need to be overcome. We then present the design of a source level dependently typed imperative programming language Xanadu, forming both static and dynamic semantics and then establishing the type soundness theorem. We also present realistic examples, which have all been verified in a prototype implementation, in support of the practicality of Xanadu. We claim that the language design of Xanadu is novel and it serves as an informative example that demonstrates a means to combine imperative programming with dependent types.},
   keywords  = {Assembly,Computer languages,Dynamic programming,Functional programming,Natural languages,Pattern matching,Programming profession,Proposals,Prototypes,Runtime},
-  file      = {/Users/charlielidbury/Zotero/storage/EBV2WRZB/Xi - 2000 - Imperative programming with dependent types.html;/Users/charlielidbury/Zotero/storage/PC4XYNPP/Xi - 2000 - Imperative programming with dependent types.html}
+  file      = {/Users/charlielidbury/Zotero/storage/EBV2WRZB/Xi - 2000 - Imperative programming with dependent types.html}
 }
 
 @misc{zalewskiTechnicalWhitepaperAflfuzz2016,
@@ -399,4 +351,59 @@
   url     = {https://lcamtuf.coredump.cx/afl/technical_details.txt},
   urldate = {2024-01-31},
   file    = {/Users/charlielidbury/Zotero/storage/99KAJ4D6/technical_details.html}
+}
+
+@inproceedings{altenkirch2010pisigma,
+  title        = {$\Pi$$\Sigma$: Dependent types without the sugar},
+  author       = {Altenkirch, Thorsten and Danielsson, Nils Anders and L{\"o}h, Andres and Oury, Nicolas},
+  booktitle    = {Functional and Logic Programming: 10th International Symposium, FLOPS 2010, Sendai, Japan, April 19-21, 2010. Proceedings 10},
+  pages        = {40--55},
+  year         = {2010},
+  organization = {Springer}
+}
+
+@misc{rust-anecdote,
+  howpublished = {\url{https://twitter.com/graydon_pub/status/1492792051657629698}},
+  author       = {Graydon Hoare},
+  day          = {13},
+  month        = feb,
+  year         = 2022
+}
+
+@misc{stackoverflow,
+  title        = {{StackOverflow Developer Survey}},
+  howpublished = {\url{https://insights.stackoverflow.com/survey/2021}},
+  year         = {2021}
+}
+
+@inproceedings{bhargavan2017everest,
+  title        = {Everest: Towards a verified, drop-in replacement of HTTPS},
+  author       = {Bhargavan, Karthikeyan and Bond, Barry and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Hawblitzel, Chris and Hritcu, Catalin and Ishtiaq, Samin and Kohlweiss, Markulf and Leino, Rustan and Lorch, Jay and others},
+  booktitle    = {2nd Summit on Advances in Programming Languages (SNAPL 2017)},
+  year         = {2017},
+  organization = {Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+
+@inproceedings{ferraiuolo2017komodo,
+  title     = {Komodo: Using verification to disentangle secure-enclave hardware from software},
+  author    = {Ferraiuolo, Andrew and Baumann, Andrew and Hawblitzel, Chris and Parno, Bryan},
+  booktitle = {Proceedings of the 26th Symposium on Operating Systems Principles},
+  pages     = {287--305},
+  year      = {2017}
+}
+
+@inproceedings{lorch2020armada,
+  title     = {Armada: low-effort verification of high-performance concurrent programs},
+  author    = {Lorch, Jacob R and Chen, Yixuan and Kapritsos, Manos and Parno, Bryan and Qadeer, Shaz and Sharma, Upamanyu and Wilcox, James R and Zhao, Xueyuan},
+  booktitle = {Proceedings of the 41st ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages     = {197--210},
+  year      = {2020}
+}
+
+@inproceedings{klein2009sel4,
+  title     = {seL4: Formal verification of an OS kernel},
+  author    = {Klein, Gerwin and Elphinstone, Kevin and Heiser, Gernot and Andronick, June and Cock, David and Derrin, Philip and Elkaduwe, Dhammika and Engelhardt, Kai and Kolanski, Rafal and Norrish, Michael and others},
+  booktitle = {Proceedings of the ACM SIGOPS 22nd symposium on Operating systems principles},
+  pages     = {207--220},
+  year      = {2009}
 }
